Materialize Parquet row groups as column vectors